--- a/portfolio.html
+++ b/portfolio.html
@@ -20,24 +20,34 @@
 </head>
 
 <body>
-   <header class="heder-bord">
-      <div class="conteiner conteiner-flx">
-         <nav class="conteiner-flx">
-            <!-- Logo   -->
-            <a class="link link-logos" href="./index.html">Web<span
-                  style="color: var(--title-text-color-basic);">Studio</span></a>
-
-            <ul class="list site-nav">
-               <li class="item"><a class="link link-item" href="./index.html">Studio</a></li>
-               <li class="item"><a class="link link-item" href="./portfolio.html">Portfolio</a></li>
-               <li class="item"><a class="link link-item" href="">Contacts</a></li>
+   <header class="heder-decor">
+      <div class="conteiner-a cont-flx">
+         <nav class="cont-flx">
+            <!-- Logo -->
+            <a class="rest-link txt-link-logo" href="./index.html">
+               Web<span class="txt-link-logo-dark">Studio</span></a>
+            <!-- Main Menu -->
+            <ul class="rest-list cont-flx lst-mn-menu">
+               <li class="item-mn-menu">
+                  <a class="rest-link txt-mn-menu" href="./index.html">Studio</a>
+               </li>
+               <li class="item-mn-menu">
+                  <a class="rest-link txt-mn-menu" href="./portfolio.html">Portfolio</a>
+               </li>
+               <li class="item-mn-menu">
+                  <a class="rest-link txt-mn-menu" href="">Contacts</a>
+               </li>
             </ul>
          </nav>
-         <address class="adrs-menu">
-            <ul class="list adrs-menu-list">
-               <li class="item-asdr"> <a class="link link-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a>
+         <address>
+            <!-- Main Menu Address -->
+            <ul class="rest-list cont-flx">
+               <li class="item-mn-menu">
+                  <a class="rest-link txt-mn-menu-adrs" href="mailto:info@devstudio.com">info@devstudio.com</a>
                </li>
-               <li class="item-asdr"> <a class="link link-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+               <li class="item-mn-menu">
+                  <a class="rest-link txt-mn-menu-adrs" href="tel:+110001111111">+11 (000) 111-11-11</a>
+               </li>
             </ul>
          </address>
       </div>
@@ -45,112 +55,187 @@
 
    <!-- It is main Portfolio -->
    <main>
-      <section class="section">
-         <div class="conteiner">
+      <section class="section-site-pdng">
+         <div class="conteiner-a">
             <h1 class="visually-hidden">WebStudio Portfolio Page</h1>
             <!-- Navigaton of Portfolio page -->
             <!-- <nav> -->
-
-            <ul class="list filter-conteiner"> <!-- list-rst -->
-               <li class="item-flt"><button class="filter-button" type="button">All</button></li>
-               <li class="item-flt"><button class="filter-button" type="button">Web Site</button></li>
-               <li class="item-flt"><button class="filter-button" type="button">App</button></li>
-               <li class="item-flt"><button class="filter-button" type="button">Design</button></li>
-               <li class="item-flt"><button class="filter-button" type="button">Marketing</button></li>
+            <ul class="rest-list filter-conteiner">
+               <li class="item-flt">
+                  <button class="filter-button" type="button">All</button>
+               </li>
+               <li class="item-flt">
+                  <button class="filter-button" type="button">Web Site</button>
+               </li>
+               <li class="item-flt">
+                  <button class="filter-button" type="button">App</button>
+               </li>
+               <li class="item-flt">
+                  <button class="filter-button" type="button">Design</button>
+               </li>
+               <li class="item-flt">
+                  <button class="filter-button" type="button">Marketing</button>
+               </li>
             </ul>
-
             <!-- </nav> -->
             <!-- Section Example Cards of WebStudio -->
-
             <!-- <h2>Works Example Cards of WebStudio</h2> -->
 
-            <ul class="list lst-work-exmpl"> <!-- list-rst -->
+            <ul class="rest-list lst-work-exmpl">
                <li class="lst-card">
-                  <a class="link" href="#">
-                     <img class="img-ds-blok" src="./images/portfolio/banking-app-interface-concept.jpg"
+                  <a class="rest-link" href="#">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/banking-app-interface-concept.jpg"
                         alt="Banking App Interface Concept" width="360">
-                     <h2 class="section-title-sz-three">Banking App Interface Concept</h2>
-                     <p class="section-parag">App</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Banking App Interface Concept</h2>
+                        <p>App</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment"
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/cashless-payment.jpg"
+                        alt="Cashless Payment" width="360">
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Cashless Payment</h2>
+                        <p>Marketing</p>
+                     </div>
+                  </a>
+               </li>
+               <li class="lst-card">
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App"
                         width="360">
-                     <h2 class="section-title-sz-three">Cashless Payment</h2>
-                     <p class="section-parag">Marketing</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Meditation App</h2>
+                        <p class="section-parag">App</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/meditaion-app.jpg" alt="Meditaion App"
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/taxi-service.jpg" alt="Taxi Service"
                         width="360">
-                     <h2 class="section-title-sz-three">Meditation App</h2>
-                     <p class="section-parag">App</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Taxi Service</h2>
+                        <p class="section-parag">Marketing</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360">
-                     <h2 class="section-title-sz-three">Taxi Service</h2>
-                     <p class="section-parag">Marketing</p>
-                  </a>
-               </li>
-               <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/screen-illustrations.jpg"
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/screen-illustrations.jpg"
                         alt="Screen Illustrations" width="360">
-                     <h2 class="section-title-sz-three">Screen Illustrations</h2>
-                     <p class="section-parag">Design</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Screen Illustrations</h2>
+                        <p class="section-parag">Design</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/online-courses.jpg" alt="Online Courses"
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/online-courses.jpg" alt="Online Courses"
                         width="360">
-                     <h2 class="section-title-sz-three">Online Courses</h2>
-                     <p class="section-parag">Marketing</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Online Courses</h2>
+                        <p class="section-parag">Marketing</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/instagram-stories-concept.jpg"
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/instagram-stories-concept.jpg"
                         alt="Instagram Stories Concept" width="360">
-                     <h2 class="section-title-sz-three">Instagram Stories Concept</h2>
-                     <p class="section-parag">Design</p>
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Instagram Stories Concept</h2>
+                        <p class="section-parag">Design</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/organic-food.jpg" alt="Organic Food" width="360">
-                     <h2 class="section-title-sz-three">Organic Food</h2>
-                     <p class="section-parag">Web Site</p>
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/organic-food.jpg" alt="Organic Food"
+                        width="360">
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Organic Food</h2>
+                        <p class="section-parag">Web Site</p>
+                     </div>
                   </a>
                </li>
                <li class="lst-card">
-                  <a class="link" href="">
-                     <img class="img-ds-blok" src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                     <h2 class="section-title-sz-three">Fresh Coffee</h2>
-                     <p class="section-parag">Web Site</p>
+                  <a class="rest-link" href="">
+                     <img class="rest-img-blok mrg-dn" src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee"
+                        width="360">
+                     <div class="card-cont">
+                        <h2 class="txt-title-h-three mrg-dn">Fresh Coffee</h2>
+                        <p class="section-parag">Web Site</p>
+                     </div>
                   </a>
                </li>
             </ul>
          </div>
       </section>
    </main>
-   <!-- Footer section -->
+
+   <!-- Footer Section -->
    <footer class="footer-set">
-      <div class="conteiner">
-         <!-- Logo -->
-         <a class="link footer-link-logos" href="./index.html">Web
-            <span class="footer-parag logo-mrg">Studio</span></a>
-         <!-- <a class="link-rst logo footer" href="./index.html"><span
-         style="color: var(- -radio-buttom-text-color);">Web</span>Studio</a> -->
-         <p class="footer-parag">Increase the flow of customers and sales for your business
-            with digital marketing & growth solutions.</p>
+      <div class="conteiner-a">
+         <!-- Footer Content Blok -->
+         <div class="footter-cont-blok">
+            <!-- Footter Logo Blok -->
+            <div class="footer-lg-blok">
+               <a class="rest-link txt-link-logo footer-lg" href="./index.html">Web
+                  <span class="footer-parag">Studio</span></a>
+
+               <p class="footer-parag">Increase the flow of customers and sales for your business
+                  with digital marketing & growth solutions.</p>
+            </div>
+            <!-- Footer Icons Blok -->
+            <div class="footer-soc-blok">
+               <p class="txt-title-h-three soc-footer">
+                  Social media
+               </p>
+               <!-- Blok Social net icons Try 4 Link  -->
+               <ul class="rest-list icn-scnet-blok footer-soc">
+                  <li>
+                     <a class="rest-link icn-scnet-rd" href="">
+                        <!-- <p>Icon</p> -->
+                        <svg class="icn-pic">
+                           <use href="./images/symbol-defs-03-1.svg#sn-insta"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a class="rest-link icn-scnet-rd" href="">
+                        <!-- <p>Icon</p> -->
+                        <svg class="icn-pic">
+                           <use href="./images/symbol-defs-03-1.svg#sn-twit"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a class="rest-link icn-scnet-rd" href="">
+                        <!-- <p>Icon</p> -->
+                        <svg class="icn-pic">
+                           <use href="./images/symbol-defs-03-1.svg#sn-fb"></use>
+                        </svg>
+                     </a>
+                  </li>
+                  <li>
+                     <a class="rest-link icn-scnet-rd" href="">
+                        <!-- <p>Icon</p> -->
+                        <svg class="icn-pic">
+                           <use href="./images/symbol-defs-03-1.svg#sn-linin"></use>
+                        </svg>
+                     </a>
+                  </li>
+               </ul>
+               <!-- END  Blok Social net icons Try 4 Link  -->
+            </div>
+         </div>
       </div>
    </footer>
-
+   
 </body>
 
 </html>
